nouvelle architecture gui + cli + denoize.jar fonctionnel