@@ -35,13 +35,11 @@
 			<artifactId>javafx-fxml</artifactId>
 			<version>${javafx.version}</version>
 		</dependency>
-		<!-- Selon vos besoins, vous pouvez ajouter d'autres modules JavaFX -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-graphics</artifactId>
 			<version>${javafx.version}</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -53,17 +51,13 @@
 		</resources>
 
 		<plugins>
-
+			<!-- Plugin JavaFX pour développement -->
 			<plugin>
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.8</version>
 				<configuration>
-					<mainClass>ui.GUI</mainClass>
-					<options>
-						<option>--add-opens</option>
-						<option>java.base/java.lang=ALL-UNNAMED</option>
-					</options>
+					<mainClass>app.Main</mainClass>
 				</configuration>
 			</plugin>
 
@@ -71,7 +65,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.11.0</version>
 				<configuration>
 					<source>17</source>
 					<target>17</target>
@@ -93,22 +87,21 @@
 				</executions>
 			</plugin>
 
-			<!-- Plugin pour créer un JAR exécutable avec toutes les dépendances -->
+			<!-- Plugin Assembly pour JAR exécutable -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>3.3.0</version>
+				<version>3.6.0</version>
 				<configuration>
 					<finalName>denoize</finalName>
 					<appendAssemblyId>false</appendAssemblyId>
-					<outputDirectory>${project.basedir}</outputDirectory>  <!--
-					Sortie à la racine du projet -->
+					<outputDirectory>${project.basedir}</outputDirectory>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>ui.GUI</mainClass>
+							<mainClass>app.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
